--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         // Login com sucesso
                         const user = userCredential.user;
                         console.log('Login bem-sucedido: ', user);
-                        window.location.href = "//inicial.html";
+                        window.location.href = "/inicial.html";
                     })
                     .catch((error) => {
                         console.error('Erro ao fazer login:', error);
