--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="formulario">
-        <a href="/index.html"><img src="/logoHospital.png" alt="Logo ALVF"></a>
+        <a href="https://andrevinicius5.github.io/GerenciMed/index.html"><img src="/logoHospital.png" alt="Logo ALVF"></a>
         <h2>Cadastro de Usuário</h2>
         <form id="cadastroUsuarioForm" class="cadastroUsuarioForm"> 
             <label for="nome">Nome</label>
@@ -116,7 +116,7 @@
                         // Limpar os campos do formulário após o cadastro
                         cadastroUsuarioForm.reset();
                         // Redirecionar para a página de login
-                        window.location.href = '/index.html';
+                        window.location.href = 'https://andrevinicius5.github.io/GerenciMed/index.html';
                     })
                     .catch((error) => {
                         console.error('Erro ao salvar nome, e-mail e CPF no Firestore: ', error);
