--- a/inicial.html
+++ b/inicial.html
@@ -190,23 +190,23 @@
         // Função para redirecionar para a página de perfil do usuário
         function goToProfile() {
             // Redireciona para a página de perfil do usuário
-            window.location.href = 'perfil.html';
+            window.location.href = 'https://andrevinicius5.github.io/GerenciMed/perfil.html';
         }
 
         // Função para fazer logout
         function logout() {
             // Redireciona para a página de login
-            window.location.href = '/index.html';
+            window.location.href = 'https://andrevinicius5.github.io/GerenciMed/index.html';
         }
         
         // Função para redirecionar para uma página específica
         function goToPage(page) {
             // Implemente o redirecionamento para a página específica aqui
             if (page === 'estoque') {
-                window.location.href = '/estoque.html';
+                window.location.href = 'https://andrevinicius5.github.io/GerenciMed/estoque.html';
             } 
             if (page === 'medicamentos') {
-                window.location.href = '/medicamentos.html';
+                window.location.href = 'https://andrevinicius5.github.io/GerenciMed/medicamentos.html';
             } else {
                 alert(`Redirecionar para a página: ${page}`);
             }
