--- a/perfil.html
+++ b/perfil.html
@@ -168,7 +168,7 @@
         // Função para fazer logout
         function logout() {
             // Redireciona para a página de login
-            window.location.href = '/index.html';
+            window.location.href = 'https://andrevinicius5.github.io/GerenciMed/index.html';
         }
 
         // Função para habilitar edição dos campos
@@ -229,11 +229,11 @@
         // Função para redirecionar para uma página específica
         function goToPage(page) {
             if (page === 'inicial') {
-                window.location.href = 'pagina/inicial.html';
+                window.location.href = 'https://andrevinicius5.github.io/GerenciMed/inicial.html';
             } else if (page === 'estoque') {
-                window.location.href = '/estoque.html';
+                window.location.href = 'https://andrevinicius5.github.io/GerenciMed/estoque.html';
             } else if (page === 'perfil') {
-                window.location.href = 'perfil.html';
+                window.location.href = 'https://andrevinicius5.github.io/GerenciMed/perfil.html';
             }
         }
 
@@ -263,7 +263,7 @@
                     fillProfileData(user);
                 } else {
                     // Usuário não está autenticado, redirecionar para a página de login
-                    window.location.href = '/index.html';
+                    window.location.href = 'https://andrevinicius5.github.io/GerenciMed/index.html';
                 }
             });
         };
