--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input type="password" id="password" name="password" placeholder="Senha" required>
         <input type="submit" value="Login">
         <div class="signup-link">
-            <a href="//cadastro.html" onclick="showSignUpForm()">Cadastre-se</a>
+            <a href="https://andrevinicius5.github.io/GerenciMed/cadastro.html" onclick="showSignUpForm()">Cadastre-se</a>
         </div>
         <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
