--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div id="logotop" class="logohosp">
         <div class="barratop">
-            <img src="/logoHospital.png" alt="Logo ALVF">
+            <img src="logoHospital.png" alt="Logo ALVF">
         </div>
         <div class="background">
-            <img class="background" src="/background login.jpg" alt="Placeholder">
+            <img class="background" src="background login.jpg" alt="Placeholder">
         </div>
     </div>
 
