--- a/inicial.html
+++ b/inicial.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="logoHospital.png">
+        <h2>Pagina inicial</h2>
         <div id="user-actions">
             <button onclick="goToProfile()">Perfil</button>
             <button onclick="logout()">Sair</button>
