--- a/cadastro.html
+++ b/cadastro.html
@@ -10,14 +10,8 @@
     <div id="logotop" class="logohosp">
     </div>
 
-    <!-- Mensagem sobre cookies -->
-    <div id="cookieMessage" style="display: none; background-color: #f8d7da; color: #721c24; padding: 10px;">
-        <strong>Aviso:</strong> Esta página usa cookies para melhorar sua experiência. Por favor, aceite os cookies para continuar.
-        <button onclick="acceptCookies()">Aceitar cookies</button>
-    </div>
-
     <div class="formulario">
-        <a href="https://andrevinicius5.github.io/GerenciMed/index.html"><img src="/logoHospital.png" alt="Logo ALVF"></a>
+        <a href="https://andrevinicius5.github.io/GerenciMed/index.html"><img src="logoHospital.png" alt="Logo ALVF"></a>
         <h2>Cadastro de Usuário</h2>
         <form id="cadastroUsuarioForm" class="cadastroUsuarioForm"> 
             <label for="nome">Nome</label>
