--- a/estoque.html
+++ b/estoque.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="logoHospital.png">
+<h2>Estoque</h2>
         <div id="user-actions">
             <button onclick="goToPage('inicial')">Início</button>
             <button onclick="goToPage('estoque')">Estoque</button>
